--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,17 @@ body{
 a{
     text-decoration: none;
 }
+::-webkit-scrollbar{
+    width: 13px;
+}
+
+::-webkit-scrollbar-track{
+    background: black;
+    box-shadow: inset 0 0 5px rgba(0,0,0,0.5);
+}
+
+::-webkit-scrollbar-thumb{
+    background:gold;
+    border-radius: 15px;
+
+}
