--- a/src/Style/Header.css
+++ b/src/Style/Header.css
@@ -1,7 +1,12 @@
 header{
-    margin-top: 20px;
+    padding-top: 20px;
     padding-bottom: 10px;
     border-bottom: 1px solid gold;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    background-color: black;
+    z-index: 200;
 }
 .Header-logo img{
     width: 150px;
@@ -35,9 +40,9 @@ header{
     background-color: gold;
     margin: 0 30px;
 }
-.header-btn button{
+.header-btn a{
     background-color: gold;
-    color: black;
+    color: black ;
     font-size: 15px;
     font-weight: bold;
     padding: 10px 20px;
@@ -46,30 +51,40 @@ header{
     border: 2px solid gold;
     display: block;
 }
-.header-btn button:hover{
+
+.header-btn a:hover{
     background-color: transparent;
     color: white;
 }
 .header-modal{
-    position: absolute;
+    overflow: hidden;
+    position: fixed;
     top: 0;
-    left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgb(30, 30, 30);
-    z-index: 10;
-    display: none;
-    animation: fadeOut 0.7s ease forwards;
+    left: 0;
+    width:100%;
+	height: 100vh;
+    background-color: #04070C;
+    padding: 24px;
+    overflow-y: auto;
+    transform: translateX(-100%);
+	transition: all 2s ease;
+    z-index: 11;
 }
 .close{
-    animation: close 2s ease forwards;
+    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translateX(-100%);
 }
 .open{  
     display: block;
     display: flex;
     align-items: center;
     justify-content: center;
-    animation: slideIn 1s ease forwards, fadeIn 0.5s ease forwards;
+    transform: translateX(0);
 }
 .header-modal nav{
     /* margin-top: 80px; */
@@ -87,34 +102,12 @@ header{
 }
 .hamburger{
     position: relative;
-    z-index: 11;
+    z-index: 12;
     display: none;
 }
-@keyframes slideIn {
-    from {
-        transform: translateY(-100%);
-    }
-    to {
-      transform: translateY(0);
-    }
+.header_bg{
+    background-color: hsla(0, 0%, 0%, 0.795);
 }
-
-@keyframes fadeIn {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
-  }
-  @keyframes close {
-    from {
-      transform: translateY(0);
-    }
-    to {
-      transform: translateY(-100%);
-    }
-  }
 @media(max-width:730px){
     .header-nav{
         display: none;
