--- a/src/Style/Contact.css
+++ b/src/Style/Contact.css
@@ -10,7 +10,7 @@
     border-radius: 30px;
     position: relative;
 }
-form{
+.Form1{
     /* display: none; */
     position: absolute;
     -webkit-box-shadow: inset 0px 0px 10px 0px gold;
@@ -33,12 +33,12 @@ form{
     color: gold;
     font-size: 20px;
 }
-form label h3{
+.Form1 label h3{
     color: gold;
     font-size: 25px;
     margin-bottom: 8px;
 }
-form label input{
+.Form1 label input{
     background-color: transparent;
     border: 2px solid gold;
     border-radius: 20px ;
@@ -47,7 +47,7 @@ form label input{
     font-size: 20px;
     width: 100%;
 }
-form textarea{
+.Form1 textarea{
     width: 100%;
     height: 100px;
     resize: none; 
@@ -58,7 +58,7 @@ form textarea{
     padding: 10px ;
     color: white;
 }
-form button{
+.Form1 button{
     margin-top: 20px;
     width: 100%;
     padding: 10px 20px ;
@@ -67,7 +67,7 @@ form button{
     background-color: gold;
     border: 2px solid gold;
 }
-form button:hover{
+.Form1 button:hover{
     background-color: transparent;
     color: white;
 }
@@ -79,17 +79,17 @@ form button:hover{
     display: none;
 }
 @media(max-width:1350px){
-    form{
+    .Form1{
         right: 100px;
     }
 }
 @media(max-width:1260px){
-    form{
+    .Form1{
         right: 0px;
     }
 }
 @media(max-width:1150px){
-    form{
+    .Form1{
         position: relative;
 
     }
