--- a/src/Style/Hero.css
+++ b/src/Style/Hero.css
@@ -29,9 +29,9 @@
     display: block;
     margin-top: 20px;
 }
-.hero-wrapper button{
+.hero-wrapper a{
+    display: inline-block;
     margin: 0 auto;
-    display: block;
     margin-top: 50px;
     padding: 10px 40px;
     border-radius: 30px;
@@ -41,10 +41,16 @@
     color: rgb(0, 0, 0);
     font-weight: bold;
     cursor: pointer;
+    /* text-align: center; */
 }
-.hero-wrapper button:hover{
+.hero-wrapper a:hover{
     color: white;
     background-color: transparent;
+}
+.Hero-grid{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 @media(max-width:780px){
     .hero-wrapper h1{
