--- a/src/Style/ShopHero.css
+++ b/src/Style/ShopHero.css
@@ -66,6 +66,13 @@
     grid-template-columns: repeat(4,1fr);
     gap: 20px;
 }
+.ShopHero__wrapper h2{
+    color: white;
+}
+.ShopHero__wrapper span{
+    color: white;
+    
+}
 @media(max-width:1480px){
     .ShopHero__wrapper{
       
